# Pr-visionnel-de-Tresorerie

./: .gitignore  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: main.py
app/calculations/: due_date_calculator.py  fixed_charge_engine.py  forecast_engine.py  scenario_adjuster.py  vat_engine.py
app/exports/: excel_export.py
app/imports/: anomaly_detector.py  duplicate_detector.py  fec_importer.py  field_mappings.py  import_service.py  parsers.py
app/models/: cash.py  database.py  fec_entry.py  orders.py  reference.py
app/services/: forecast_service.py  referentiel_service.py  version_service.py
app/ui/: page_balance_agee.py  page_dashboard.py  page_decaissements.py  page_encaissements.py  page_hypotheses.py  page_imports.py  page_referentiels.py
backend/: config.py
backend/calculations/: collection_engine.py  disbursement_engine.py  forecast_engine.py  monthly_aggregator.py  order_converter.py  vat_engine.py
backend/imports/: field_mappings.py  import_service.py  loaders.py  parsers.py  validators.py
backend/models/: adjustments.py  assumptions.py  fixed_charges.py  history.py  imports_log.py  invoices.py  versions.py
backend/services/: fec_analysis_service.py  forecast_service.py
backend/ui/: page_ajustements.py  page_analyse_fec.py
src/app/: globals.css  layout.tsx  page.tsx
src/lib/: data-context.tsx  demo-data.ts  (+3 more)
tests/: conftest.py  test_collection_engine.py  test_disbursement_engine.py  test_due_date_calculator.py  test_fec_analysis.py  test_fec_import.py  test_forecast_engine.py  test_imports.py  test_models.py
(+35 files in other folders)
