[project]
name = "previsionnel-tresorerie"
version = "1.0.0"
description = "Outil de prévisionnel de trésorerie pour Sage 100 Gestion Commerciale"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30,<2.0",
    "sqlalchemy>=2.0,<3.0",
    "pandas>=2.1,<3.0",
    "openpyxl>=3.1,<4.0",
    "xlsxwriter>=3.1,<4.0",
    "python-dateutil>=2.8,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
